--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ header h1 {
 }
 
 .profile-picture {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    margin: 20px auto;
+    margin: 20px 0 0 20px;
     display: block;
 }
 
