--- a/style.css
+++ b/style.css
@@ -22,8 +22,10 @@ header h1 {
 }
 
 .profile-picture {
-    width: 100px;
-    height: 100px;
+    width: 50%;
+    /* 使高度与宽度一致，形成正方形 */
+    padding-top: 50%;
+    position: relative;
     border-radius: 50%;
     margin: 20px 0 0 20px;
     display: block;
