--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ header h1 {
 }
 
 .profile-picture {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
     position: absolute;
     top: 70px;
     left: 25%;
