--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ header {
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #77C1E3 3px solid;
-    position: relative;
 }
 
 header h1 {
@@ -20,15 +19,6 @@ header h1 {
     text-transform: uppercase;
     margin: 0;
     font-size: 24px;
-}
-
-.profile-picture {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    position: absolute;
-    top: 70px;
-    left: 25%;
 }
 
 main {
@@ -75,4 +65,8 @@ a:hover {
     width: 200px;
     height: 200px;
     border: 1px solid #ccc;
+}
+
+.intro-paragraph {
+    text-indent: 2em;
 }
