--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
     padding-top: 30px;
     min-height: 70px;
     border-bottom: #77C1E3 3px solid;
+    position: relative;
 }
 
 header h1 {
@@ -19,6 +20,14 @@ header h1 {
     text-transform: uppercase;
     margin: 0;
     font-size: 24px;
+}
+
+.left-image {
+    width: 20%;
+    height: auto;
+    position: absolute;
+    top: 70px;
+    left: 0;
 }
 
 main {
